<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ghummanjeee.quiz.Main2Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/std"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/name"
            android:textColor="@color/Red"
            android:textSize="34dp" />

        <LinearLayout
            android:id="@+id/tp"
            android:layout_width="match_parent"
            android:layout_height="210dip"
            android:layout_below="@+id/std"
            android:layout_margin="5dp"
            android:background="@android:color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/blue"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/efg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Stdrt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/stdrat"
                            android:textColor="@color/white"
                            android:textSize="34dp"
                            android:textStyle="bold" />

                        <RatingBar
                            android:id="@+id/rtbr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt"/>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="150dp"
                        android:background="@android:color/black"
                        android:text="@string/Save"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tchr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tp"
            android:layout_centerHorizontal="true"
            android:text="@string/tchr"
            android:textColor="@color/Red"
            android:textSize="34dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dip"
            android:layout_below="@+id/tchr"
            android:layout_margin="5dp"
            android:id="@+id/tc"
            android:background="@android:color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/blue"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/tchrimg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/efg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tchrexp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/tchrexp"
                            android:textColor="@color/white"
                            android:textSize="34dp"
                            android:textStyle="bold" />

                        <CheckBox
                            android:id="@+id/Andriod"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/and"
                            android:textColor="@color/white"/>

                        <CheckBox
                            android:textColor="@color/white"
                            android:id="@+id/web"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/web" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="150dp"
                        android:background="@android:color/black"
                        android:text="@string/Save"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/next"
            android:layout_below="@+id/tc"
            android:layout_width="220dp"
            android:text="Next"
            android:layout_centerHorizontal="true"
            android:background="@color/blue"
            android:textStyle="bold"
            android:textSize="34dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />
    </RelativeLayout>
</ScrollView>