<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ghummanjeee.quiz.MainActivity"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/std"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:text="@string/name"
        android:textColor="@color/Red"
        android:textSize="34dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dip"
        android:layout_below="@+id/std"
        android:layout_margin="5dp"
        android:id="@+id/tp"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/blue"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/FS"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <EditText
                    android:id="@+id/Fn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/Ln"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <EditText
                    android:id="@+id/Ln"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:background="@android:color/black"
                    android:text="@string/Save"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_below="@+id/tp"
        android:id="@+id/tchr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tchr"
        android:textColor="@color/Red"
        android:textSize="34dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dip"
        android:layout_below="@+id/tchr"
        android:layout_margin="5dp"
        android:id="@+id/tcher"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/blue"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fNT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/FS"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <EditText
                    android:id="@+id/fNED"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/Ln"
                    android:id="@+id/LST"
                    android:textColor="@color/white"
                    android:textSize="28dp" />

                <EditText
                    android:id="@+id/LSED"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:background="@android:color/black"
                    android:text="@string/Save"
                    android:id="@+id/sae"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
<Button
    android:layout_below="@+id/tcher"
    android:layout_width="220dp"
    android:layout_centerHorizontal="true"
    android:text="Next"
    android:background="@color/blue"
    android:textSize="34dp"
    android:textStyle="bold"
    android:id="@+id/nxt"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    />
</RelativeLayout>
</ScrollView>