<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ghummanjeee.quiz.Main3Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_below="@+id/tchr"
            android:layout_margin="5dp"
            android:id="@+id/tc"
            android:background="@android:color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/blue"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/tchrimg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/efg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fstsfnal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/FS"
                            android:textColor="@color/white"
                            android:textSize="26dp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/LST"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/Ln"
                            android:textColor="@color/white"
                            android:textSize="26dp"
                            android:textStyle="bold" />
                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/teacher"
            android:layout_below="@+id/tc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/tchr"
            android:textColor="@color/Red"
            android:textSize="34dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_below="@+id/teacher"
            android:layout_margin="5dp"
            android:id="@+id/ps"
            android:background="@android:color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/blue"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/techerimge"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/efg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fstchr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/FS"
                            android:textColor="@color/white"
                            android:textSize="26dp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/LSTc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/Ln"
                            android:textColor="@color/white"
                            android:textSize="26dp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/ecp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/tchrexp"
                            android:textColor="@color/white"
                            android:textSize="26dp"
                            android:textStyle="bold" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_below="@+id/ps"
            android:layout_width="220dp"
            android:layout_centerHorizontal="true"
            android:text="Finish"
            android:background="@color/blue"
            android:textSize="34dp"
            android:textStyle="bold"
            android:id="@+id/Finish"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/tchr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/Red"
            android:textSize="34dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/teacher"
            android:layout_alignStart="@+id/teacher" />
    </RelativeLayout>
    </ScrollView>